--- a/ch02/src/main/webapp/ex06.html
+++ b/ch02/src/main/webapp/ex06.html
@@ -3,6 +3,13 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Windows 7과 Mac OSX 비교</title>
+<style>
+h1 {
+	font-size:12px;
+	font-weight:normall;
+	color:#06f;
+}
+</style>
 </head>
 
 <body>
@@ -32,6 +39,5 @@
 	<p>맥인 경우 윈도우와는 매우 다른 환경이기 때문에 PC 사용자들이 처음 맥을 접하면 매우 당황하게 되지만, 2~3일
 		정도 사용하다 보면 매우 편리하게 사용할 수 있습니다. 응용프로그램인 경우 윈도우와 맥인 경우 동일한 것(어도비 포토샵, MS
 		오피스) 있지만, 매우 다른 프로그램들이 존재하고, 사용법도 조금은 틀립니다.</p>
-
 </body>
 </html>
