--- a/ch03/src/main/webapp/ex01.html
+++ b/ch03/src/main/webapp/ex01.html
@@ -41,22 +41,30 @@ body {
 	/* center align */
 	margin-left: auto;
 	margin-right: auto;
-	
-	/* 예제 */
-	margin-top: 200px;
 }
 </style>
 <script>
 function onClicked() {
 	elDiv = document.getElementById("my-div");
-	console.log(elDiv);
-	elDiv.style.marginTop = "160px";
+	
+	marginTop = parseInt(elDiv.style.marginTop);
+	marginTop -= 10;
+	elDiv.style.marginTop = marginTop + "px";
 }
+
+i = 0;
+setInterval(function() {
+	i++;
+	console.log("!!!!" + i);	
+}, 1000);
+
+
+console.log("some codes");
+
 </script>
 </head>
-
 <body>
-	<div id="my-div" class='box1' onclick='onClicked()'>
+	<div id="my-div" class='box1' style="margin-top:200px" onclick='onClicked();'>
 		CSS에서 가장 보편적이고 많이 사용하는 마진과 패딩에 대한 값이 어떻게 적용되는지 확인해 보겠습니다.
 	</div>
 </body>
