--- a/ch03/src/main/webapp/ex04.html
+++ b/ch03/src/main/webapp/ex04.html
@@ -18,11 +18,11 @@ body {
 	background-color: #FFC;
 }
 .box1 {
-	border: 4px dashed;
+	border: 1px dashed;
 
 }
 .box2 {
-	border:4px dotted;
+	border:1px dotted;
 
 }
 .box3 {
@@ -48,8 +48,24 @@ body {
 }
 
 .box8 {
-	border: 4px solid;
-
+	border: 1px solid;
+	
+	/* 12[4(방향) * 3(속성)]가지의 스타일, 방향, 컬러 스타일링을 할 수 있다. */
+	border-left-width: 1px;
+	border-left-style: solid;
+	border-left-color: blue;
+	
+	/* 12[4(축약) * 3(속성)] 가지의 스타일, 방향, 컬러 스타일링을 할 수 있다. */
+	border-width: 1px 2px 3px 4px; /* T R B L */
+	border-width: 1px 2px 3px;     /* T (R,L) B */
+	border-width: 1px 2px;         /* (T, B) (R,L) */
+	border-width: 1px;             /* (T, R, B, L) */
+	
+	border-style: dashed dotted solid double;
+	border-color: red green blue black;
+	
+	/* 보통은 다음과 같은 방식을 사용한다.(4방향이 모두 width, style, color가 동일하다면...) */
+	border: 1px solid #111;
 }
 .box9 {
 	border: 4px none;
