--- a/ch03/src/main/webapp/nhead.html
+++ b/ch03/src/main/webapp/nhead.html
@@ -7,7 +7,7 @@
 .header {
 	width: 630px;
 	height: 100px;
-
+	background-color: #ddd;
 	margin: 50px auto;
 }
 
@@ -17,12 +17,34 @@
     height: 52px;
 	background:url('/ch03/images/nhead.png') no-repeat 0 -158px / 442px 428px;
 }
+
+.search-box {
+	width: 400px;
+	height: 50px;
+	border: 3px solid #19CE60;
+	background-color: #fff;
+}
+
+.search-box input, .search-box a {
+	display: block;
+} 
+
+.search-box input {
+	border: none;
+	outline: none;
+}
 </style>
 </head>
 <body>
 	<div class="header">
 		<h1 class="logo">네이버</h1>
-		<div class="search-bar">
+		<div class="search-box">
+			<input type="text">
+			<a href="#" id="keyboard">키보드</a>
+			<a href="#" id="dropdown">드롭다운</a>
+			<div class="btn-search">
+				<button>돋보기</button>
+			</div>
 		</div>
 	</div>
 </body>
