--- a/ch03/src/main/webapp/nhead.html
+++ b/ch03/src/main/webapp/nhead.html
@@ -22,7 +22,7 @@ body	{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 	overflow: hidden;
 	width: 222px;
 	height: 52px;
-	background: url('/ch03/images/nsplite.png') no-repeat 0 -158px / 440px 439px;
+	background: url('/ch03/images/nhead.png') no-repeat 0 -158px / 442px 428px;
 }
 
 .search-box {
@@ -60,20 +60,20 @@ body	{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 	width: 20px;
 	height: 12px;
 	margin: 15px 10px 0 0;
-	background-image: url('/ch03/images/nsplite.png');
-	background-position: -300px -279px;
+	background-image: url('/ch03/images/nhead.png');
+	background-position: -398px -267px;
 	background-repeat: no-repeat;
-	background-size: 444px 439px;
+	background-size: 442px 428px;
 }
 
 .search-box #dropdown {
 	width: 10px;
 	height: 5px;
 	margin: 20px 10px 0 0;
-	background-image: url('/ch03/images/nsplite.png');
-	background-position: -96px -296px;
+	background-image: url('/ch03/images/nhead.png');
+	background-position: -158px -151px;
 	background-repeat: no-repeat;
-	background-size: 443px 439px;
+	background-size: 442px 428px;
 }
 
 .search-box .btn-search {
@@ -89,8 +89,8 @@ body	{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 	height: 22px;
 	display: block;
 	margin: 10px auto;
-	background: #19CE60 url('/ch03/images/nsplite.png') no-repeat -418px -208px;
-	background-size: 443px 439px;
+	background: #19CE60 url('/ch03/images/nhead.png') no-repeat -420px -24px;
+	background-size: 442px 428px;
 }
 </style>
 </head>
