--- a/ch06/src/main/webapp/ex08.html
+++ b/ch06/src/main/webapp/ex08.html
@@ -3,6 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script>
+window.onload = function(){
+	setTimeout(function(){
+		var imgElement = document.createElement("img");
+		imgElement.src = 'https://item.kakaocdn.net/do/862539f7f2171437385154b3b749990f7154249a3890514a43687a85e6b6cc82';
+		imgElement.style.width = "200px";
+		imgElement.alt = "루피만세~";
+		imgElement.title = "루피만세~~~~~~";
+		
+		document.body.appendChild(imgElement);
+	}, 2000);
+}
+</script>
 </head>
 <body>
 	<h1 id='h' data-no='10'>DOM(Document Object Model)</h1>
