--- a/ch07/src/main/webapp/ex17.html
+++ b/ch07/src/main/webapp/ex17.html
@@ -6,13 +6,17 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("#p1").text("1.안녕하세요");
+		$("#p2").text("2.<strong>안녕하세요</strong>");
+		console.log($("#p3").text());
+		console.log($("#p4").text());
 	}, 1000);
 });
 </script>
 </head>
 <body>
 	<h1>DOM 조작 API - text()</h1>
-
+	
 	<p id="p1">...</p>
 	<p id="p2">...</p>
 	<p id='p3'>3.안녕하세요</p>
@@ -21,7 +25,7 @@ $(function(){
 		HTML의 escape 문자들
 		& -> &amp;
 		space -> &nbsp;
-		< -> &lth;
+		< -> &lt;
 		> -> &gt;
 		' -> &quot;
 	-->
