--- a/ch07/src/main/webapp/ex37.html
+++ b/ch07/src/main/webapp/ex37.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>sample1</title>
-<script type="text/javascript" src="./jquery/jquery-1.9.0.js"></script>
+<script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script type="text/javascript">
 
 var images = [ 
@@ -19,8 +19,9 @@ var images = [
 $(function(){
 
 	$("button").click(function(){
-		// 랜덤 변수 
-		var result = Math.floor( Math.random() * (images.length-1)  ) + 1;
+		var index = Math.floor( Math.random() * images.length);
+		var data = images[index].split(":");
+		$("p img").attr("src", "images/" + data[1]).attr("alt", data[0]);
 	});
 	
 });
@@ -29,7 +30,7 @@ $(function(){
 <body>
 	<button>화면을 변경</button>
 	<p>
-		<img src="images/Desert.jpg" alt="사막" />
+		<img>
 	</p>
 </body>
 </html>
