--- a/ch07/src/main/webapp/ex26.html
+++ b/ch07/src/main/webapp/ex26.html
@@ -6,6 +6,7 @@
 <script>
 $(function(){
 	setTimeout(function(){
+		$("#p1").insertBefore("#h2");
 	}, 1000);
 });
 </script>
@@ -13,7 +14,8 @@ $(function(){
 <body>
 	<h1>DOM 조작 API - insertBefore()</h1>
 	
-	<p id="p1">내용입니다.</p>
+	
 	<h2 id="h2">제목입니다.</h2>
+	<p id="p1">내용입니다.</p>
 </body>
 </html>
